--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.8.15",
     "core-js": "^3.6.4",
     "firebase": "^7.14.0",
     "vue": "^2.6.11",
-    "vuefire": "^2.2.2"
+    "vuefire": "^2.2.2",
+    "vuex": "^3.1.3",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
