--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "buefy": "^0.8.15",
     "core-js": "^3.6.4",
     "firebase": "^7.14.0",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
     "vuefire": "^2.2.2",
     "vuex": "^3.1.3",
     "vuex-persist": "^2.2.0"
